--- a/homepage/Rakefile
+++ b/homepage/Rakefile
@@ -2,7 +2,7 @@ desc "Rewrite index.html using index.erb and publisher_homepage.html"
 task :index do
   require 'erb'
   @title = "Hardmock - atomicobject.rb"
-  @plugin_install = "$ script/plugin install svn://rubyforge.org/var/svn/hardmock/tags/hardmock"
+  @plugin_install = "$ script/plugin install http://hardmock.rubyforge.org/svn/tags/hardmock"
   @header_html = File.read("page_header.html")
   html = ERB.new(File.read("index.erb")).result(binding)
   fname = "index.html"
